# Hope-Hash

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  learnings.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
deploy/grafana/: dashboard.yml  datasource.yml  hope-hash.json
deploy/prometheus/: prometheus.yml
docs/: architecture.en.md  architecture.ru.md  deploy.en.md  deploy.ru.md  getting-started.en.md  getting-started.ru.md
docs/handoff/: README.md  final-review.md  pr-a-summary.md  pr-b-summary.md  pr-c-summary.md  review-code.md  review-docs.md  review-security.md  review-tests.md
docs/superpowers/specs/: 2026-05-02-three-pr-roadmap.md
src/hope_hash/: __init__.py  __main__.py  _logging.py  address.py  banner.py  bench.py  block.py  cli.py  demo.py  metrics.py  miner.py  notifier.py  parallel.py  pools.py  sha_native.py  solo.py  storage.py  stratum.py  tui.py  webui.py
tests/: conftest.py  test_address.py  test_banner.py  test_bench.py  test_bench_backends.py  test_block.py  test_demo.py  test_healthz.py  test_metrics.py  test_notifier.py  test_notifier_timing.py  test_pools.py  test_sha_native.py  test_solo.py  test_storage.py  test_stratum.py  test_tui.py  test_webui.py
